<resources>
    <string name="app_name">Sudah Sehat</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="clear">Clear</string>
    <string name="check_out">Check out</string>
    <string name="night_count">%d Night</string>
    <string name="nights_count">%d Nights</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="Validity_Period">Validity Period</string>
    <string name="test_type">Jenis Test</string>
    <string name="create_passport">Upload Data</string>
    <string name="immune_until">Berakhir</string>
    <string name="birthdate">Birthdate</string>
    <string name="start_date">Awal Berlaku</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="country">Country</string>
    <string name="email_admin">admin@gmail.com</string>
    <string name="pass_admin">password</string>
    <string name="email_coba">fahmifebff@gmail.com</string>
    <string name="pass_coba">fahmi123</string>
</resources>